fix: corrected javadoc. javadoc plugin is now configured to fail on error. checkstyle has been expanded to enforce class comments (#356)
Co-authored-by: akafredperry <fred@atsign.com>